force-app/main/default/objects/Account/fields/ID_t__c.field-meta.xml
<CustomField>
    <fullName>ID_t__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>