force-app/main/default/objects/Account/fields/Info_t__c.field-meta.xml
<CustomField>
    <fullName>Info_t__c</fullName>
    <label>Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>