force-app/main/default/objects/Account/recordTypes/Employer.recordType-meta.xml
<RecordType>
    <fullName>Employer</fullName>
    <active>true</active>
    <label>Employer</label>
</RecordType>