force-app/main/default/objects/Account/recordTypes/None.recordType-meta.xml
<RecordType>
    <fullName>None</fullName>
    <active>true</active>
    <label>None</label>
</RecordType>